--- a/docker/web/app/globals.css
+++ b/docker/web/app/globals.css
@@ -19,7 +19,7 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
-      to bottom,
+      90deg,
       transparent,
       rgb(var(--background-end-rgb))
     )
